--- a/ES6_data_manipulation/package.json
+++ b/ES6_data_manipulation/package.json
@@ -1,16 +1,14 @@
 {
   "name": "es6_data_manipulation",
   "version": "1.0.0",
-  "description": "ff",
-  "main": "0-get_list_students.js",
+  "description": "Projet de manipulation de données en ES6",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^9.23.0",
-    "jest": "^29.7.0"
+    "jest": "^29.0.0"
   }
 }
