--- a/ES6_data_manipulation/package.json
+++ b/ES6_data_manipulation/package.json
@@ -13,5 +13,10 @@
     "@babel/preset-env": "^7.26.9",
     "babel-jest": "^29.7.0",
     "jest": "^29.0.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
