--- a/ES6_data_manipulation/package.json
+++ b/ES6_data_manipulation/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "es6_data_manipulation",
-  "version": "1.0.0",
-  "description": "Projet de manipulation de données en ES6",
-  "main": "index.js",
   "scripts": {
-    "test": "npx jest"
+      "lint": "./node_modules/.bin/eslint .",
+      "check-lint": "./node_modules/.bin/eslint . --fix",
+      "dev": "npx babel-node",
+      "test": "jest",
+      "full-test": "./node_modules/.bin/eslint *.js && jest"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.0.0"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    }
+      "@babel/core": "^7.6.0",
+      "@babel/node": "^7.8.0",
+      "@babel/preset-env": "^7.6.0",
+      "@eslint/js": "^9.23.0",
+      "eslint": "^6.8.0",
+      "eslint-config-airbnb-base": "^14.0.0",
+      "eslint-plugin-import": "^2.18.2",
+      "eslint-plugin-jest": "^22.17.0",
+      "globals": "^16.0.0",
+      "jest": "^24.9.0"
   }
+}
